--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "scripts": {
     "//": "do not wrap into single quotes - windows doesn't unwrap arg in this case",
-    "compile": "ts-babel \"packages/*\" test && yarn schema",
+    "compile": "ts-babel \"packages/*\" packages/@ledgerhq/electron-updater test && yarn schema",
     "//compile2": "tsc --build packages/electron-builder packages/electron-updater packages/electron-builder-squirrel-windows && yarn schema",
     "lint": "node test/out/helpers/lint.js",
     "lint-deps": "node ./test/out/helpers/checkDeps.js",
@@ -25,7 +25,7 @@
     "////": "pip3 install mkdocs-material mkdocs pymdown-extensions markdown-include Pygments --upgrade"
   },
   "//": "repository must be specified otherwise conventional-changelog will use forked repo (currently cloned)",
-  "repository": "https://github.com/electron-userland/electron-builder",
+  "repository": "https://github.com/LedgerHQ/electron-builder",
   "///": "All dependencies for all packages (hoisted)",
   "////": "All typings are added into root `package.json` to avoid duplication errors in the IDE compiler (several `node.d.ts` files).",
   "dependencies": {
@@ -120,10 +120,6 @@
     "typescript": "^3.1.6",
     "whitespace": "^2.1.0",
     "worker-farm": "^1.6.0"
-  },
-  "/////": "proton-native is required only for proton tests",
-  "optionalDependencies": {
-    "proton-native": "1.1.9"
   },
   "jest": {
     "testEnvironment": "node",
